--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <table class="imgtable">
             <tr>
                 <td>
-                    <a href="https://mmmmimic.github.io/"><img src="picture/wximg.jpg" alt="alt text" width="125px" /></a>&nbsp;
+                    <a href="https://withtimesgo1115.github.io/"><img src="picture/wximg.jpg" alt="alt text" width="125px" /></a>&nbsp;
                 </td>
                 <td align="left">
                     <ul>
@@ -55,6 +55,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         I am Caining (pronunciation similar to Tsai-Ning), a Software Engineer at the <a href="https://www.tencent.com/english"> <b>Tencent</b></a>. 
         I got my bachelor's degree from <a href="https://english.stdu.edu.cn/"> <b>Shijiazhuang Tiedao University</b></a> under the supervision of <a href="https://scholar.google.com/citations?user=HjZXJeIAAAAJ&hl=en"> <b>Prof. Shengyuan Yang</b></a>.<br />
+        I got my master's degree from <a href="https://www.dtu.dk/english"> <b>Technical University of Denmark</b></a> under the supervision of <a href="https://scholar.google.com/citations?user=aqvfXLcAAAAJ&hl=it"> <b>Prof. Roberto Galaezzi</b></a>.<br />
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         I have a general interest in distributed system, high-performace computing and deep learning. I worked on mechatronics (2018-2019), image processing and object detection (2020-2021), and software development based on cloud platform (2021-current). 
         Recently, I am devoted to data processing for autonomous driving industry. <br />   
@@ -66,7 +67,8 @@
         <ul>
             <li>
                 <p>
-                    <b>2022/12/06</b> I had my first-year presentation. Looking forward to the next stage! </u><br />
+                    <b>2022/11-current</b> Geographic Information Desensitization for the Autonomous Driving Data </u><br />
+                    <b>Project Description</b> Provide a set of software services to the autonomous driving company for compliance processing of vehicle data packets collected by the fleet in the cloud. </u><br />
                 </p>
             </li>
         </ul>   
