--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
             <li>
                 <p>
                     <b>2022/11-current</b> Geographic Information Desensitization for the Autonomous Driving Data </u><br />
-                    <b>Project Description</b> Provide a set of software services to the autonomous driving company for compliance processing of vehicle data packets collected by the fleet in the cloud. </u><br />
+                    <b>Project Description</b> <br/>
+                    Provide a set of software services to the autonomous driving company for compliance processing of vehicle data packets collected by the fleet in the cloud. </u><br />
+                    <b>Work Content</b> 
+                        <li>Based on Flask and Argo, a set of background services is developed to realize data packet parsing, GPS coordinate deflection, secret geographic information filtering, face-license plate blurring.</li>
+                        <li>Based on Tencent Cloud, develop a set of related processes and frameworks such as authentication, resource purchase and automatic deployment. </li>
+                    </u><br />
                 </p>
             </li>
         </ul>   
