--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </table>
         <h2><font color="Brown">About Me</font></h2> 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        I am Caining (pronunciation similar to Tsai-Ning), a Software Engineer at the <a href="https://www.tencent.com/english"> <b>Tencent</b></a>. 
+        I am Caining (pronunciation similar to Tsai-Ning), a Software Engineer at the <a href="https://www.tencent.com/en-us/index.html"> <b>Tencent</b></a>. 
         I got my bachelor's degree from <a href="https://english.stdu.edu.cn/"> <b>Shijiazhuang Tiedao University</b></a> under the supervision of <a href="https://scholar.google.com/citations?user=HjZXJeIAAAAJ&hl=en"> <b>Prof. Shengyuan Yang</b></a>.<br />
         I got my master's degree from <a href="https://www.dtu.dk/english"> <b>Technical University of Denmark</b></a> under the supervision of <a href="https://scholar.google.com/citations?user=aqvfXLcAAAAJ&hl=it"> <b>Prof. Roberto Galaezzi</b></a>.<br />
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -62,17 +62,17 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       
         I am looking forward to any collaborations! Please also drop me an email if you have any interesting ideas on software projects.<br />  
 
-        <h2><font color="Red">Professional Experience</font></h2>
+        <h2>Professional Experience</h2>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <ul>
             <li>
                 <p>
                     <b>2022/11-current</b> Geographic Information Desensitization for the Autonomous Driving Data </u><br />
-                    <b>Project Description</b> <br/>
+                    <i>Project Description</i> <br/>
                     Provide a set of software services to the autonomous driving company for compliance processing of vehicle data packets collected by the fleet in the cloud. </u><br />
-                    <b>Work Content</b> 
-                        <li>Based on Flask and Argo, a set of background services is developed to realize data packet parsing, GPS coordinate deflection, secret geographic information filtering, face-license plate blurring.</li>
-                        <li>Based on Tencent Cloud, develop a set of related processes and frameworks such as authentication, resource purchase and automatic deployment. </li>
+                    <i>Work Content</i> 
+                        &nbsp;&nbsp;<li>Based on Flask and Argo, a set of background services is developed to realize data packet parsing, GPS coordinate deflection, secret geographic information filtering, face-license plate blurring.</li>
+                        &nbsp;&nbsp;<li>Based on Tencent Cloud, develop a set of related processes and frameworks such as authentication, resource purchase and automatic deployment. </li>
                     </u><br />
                 </p>
             </li>
