--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
                     <b>2022/11-current</b> Geographic Information Desensitization for the Autonomous Driving Data </u><br />
                     <i>Project Description</i> <br/>
                     Provide a set of software services to the autonomous driving company for compliance processing of vehicle data packets collected by the fleet in the cloud. </u><br />
-                    <i>Work Content</i> 
-                        &nbsp;&nbsp;<li>Based on Flask and Argo, a set of background services is developed to realize data packet parsing, GPS coordinate deflection, secret geographic information filtering, face-license plate blurring.</li>
-                        &nbsp;&nbsp;<li>Based on Tencent Cloud, develop a set of related processes and frameworks such as authentication, resource purchase and automatic deployment. </li>
+                    <i>Work Content</i>
+                        <ul>
+                            &nbsp;&nbsp;<li>Based on Flask and Argo, a set of background services is developed to realize data packet parsing, GPS coordinate deflection, secret geographic information filtering, face-license plate blurring.</li>
+                            &nbsp;&nbsp;<li>Based on Tencent Cloud, develop a set of related processes and frameworks such as authentication, resource purchase and automatic deployment. </li>
+                        </ul>
                     </u><br />
                 </p>
             </li>
@@ -80,7 +82,7 @@
         <ul>
             <li>
                 <p>
-                    <b>2022/11/22</b> How can we communicate with the deep models? Let a model consider the image understanding task a gradual abstraction of concepts - like what we humans do! Check our <a href="https://arxiv.org/abs/2211.10630"> <i>PCBM</i></a> for details. </u><br />
+                    <b>2022/08-2022/11</b> Data Lake Data Management for the Autonomous Driving Industry </u><br />
                 </p>
             </li>
         </ul>   
