--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             <li>
                 <p>
                     <b>2022/08-2022/11</b> Data Lake Data Management for the Autonomous Driving Industry </u><br />
+                    <i>Project Description</i> <br/>
+                    Build a data lake technical scheme in the field of autonomous driving for customers and improve the scheme and Tencent cloud products during negotiation. 
+                    <i>Work Content</i>
+                    <ul>
+                        &nbsp;&nbsp;<li>Understand the autonomous driving data lake scenario and propose the corresponding public cloud architecture scheme. </li>
+                        &nbsp;&nbsp;<li>Familiar with a variety of public cloud products, including object storage, file storage, container service, virtual machine, big data development, governance platform, data lake, EMR, etc.</li> 
+                        &nbsp;&nbsp;<li>Develop the Argo-based autonomous driving data batch and stream processing pipeline, covering the common rosbag unpacking, GPS coordinate deflection, geographic data decryption, personal data desensitization, structured data entering the lake, point cloud preprocessing, etc. </li>
+                    </ul>
                 </p>
             </li>
         </ul>   
