--- a/index.html
+++ b/index.html
@@ -97,63 +97,40 @@
         <ul>
             <li>
                 <p>
-                    <b>2022/11/11</b> Our <a href="https://www.tandfonline.com/doi/full/10.1080/08982112.2022.2140436"> <i>paper</i></a> about unsupervised fault diagnosis gets accpected into <b>Quality Engineering 2022</b>. I wrote this paper when I was a Junior. What a long and tough journey!<br />
+                    <b>2022/03-2022/07</b> Annotation Tool of Artificial Intelligence Algorithm Platform<br />
+                    <i>Project Description</i> <br/>
+                    The self-developed comprehensive AI algorithm development platform of Tencent covers the labeling platform and algorithm development platform. The labeling platform mainly involves data set management, label management, project management, task management, homework, quality inspection management, autonomous labeling, etc.  
+                    <i>Work Content</i>
+                    <ul>
+                        &nbsp;&nbsp;<li>Developing a front-end page based on React and Tea component library for the web portal </li>
+                        &nbsp;&nbsp;<li>Development of annotation drawing page based on Canvas and SVG.js </li> 
+                        &nbsp;&nbsp;<li>Unified management of component data using Redux-like tool </li>
+                        &nbsp;&nbsp;<li>•	The functions mainly include zooming, moving canvas, drawing rectangles, polygons and polylines, highlighting the target, dragging and deforming the target, changing labels, changing attributes, adding graphics, deleting graphics, turning pages, saving and updating annotations, etc. </li>
+                    </ul>
                 </p>
             </li>
         </ul>   
         <ul>
             <li>
                 <p>
-                    <b>2022/10/19</b> Our team ranked the <b><font color="red">4th</font></b> place for the classification track of the <a href="https://www.ood-cv.org/"> <i>OOD-CV challenge 2022</i></a> at ECCV 2022. Thanks my teammates! </i></a><br /> 
+                    <b>2021/08-2022/03</b>Digital Marketing SaaS Products Based on Enterprise WeChat<br />
+                    <i>Project Description</i> <br />
+                    Tencent's self-developed SaaS platform for digital marketing of the automobile industry covers multi-tenant management, security center, application management, consumer operation tools, and other operation modules, as well as business management modules such as the data figures on the home page, analysis, CRM, marketing, materials, tools, merchants and system management. 
+                    <i>Work Content</i>
+                    <ul>
+                        &nbsp;&nbsp;<li>Developing front-end page based on React and Tea component library for web portal </li>
+                        &nbsp;&nbsp;<li>Use various third-party plugins such as Echarts to realize data visualization requirements </li> 
+                        &nbsp;&nbsp;<li>Rapid development of HTML5 pages such as account binding based on Vue </li>
+                        &nbsp;&nbsp;<li>Update the UI versions of all portal pages, and adjust the page layout and style based on CSS3. </li>
+                    </ul>
                 </p>
             </li>
-        </ul>  
-        <ul>
-            <li>
-                <p>
-                    <b>2022/09/26</b> I introduced our progress in the fetal ultrasound assistance project at the <a href="https://direc.dk/direc-seminar-2022/"> <i>DIREC Seminar 2022</i></a>. My first trip to Aarhus and Jutland! </i></a><br /> 
-                </p>
-            </li>
-        </ul>    
-        <ul>
-            <li>
-                <p>
-                    <b>2022/09/23</b> I presented our diffConv at the <a href="https://di.ku.dk/english/event-calendar-2022/pioneer-centre-seminar-pre-eccv-seminar/"> <i>Pre-ECCV Seminar</i></a>. I also help organize this event. It is so nice to know people doing computer vision in Nordic countries! </i></a><br /> 
-                </p>
-            </li>
-        </ul>         
-        <ul>
-            <li>
-                <p>
-                    <b>2022/07/03</b> Our <a href="https://arxiv.org/abs/2111.14658"> <i>diffConv</i></a> gets accpected into <b>ECCV 2022</b>!<br />
-                </p>
-            </li>
-        </ul>        
-        <ul>
-            <li>
-                <p>
-                    <b>2022/05/23</b> Our <a href="https://arxiv.org/abs/2205.11115"> <i>DTU-Net</i></a> is available on arxiv.<br />
-                </p>
-            </li>
-        </ul>       
-        <ul>
-            <li>
-                <p>
-                    <b>2021/03/05</b> Our <a href="https://www.sciencedirect.com/science/article/pii/S0950705121000599"> <i>CWT-LBCNN</i></a> gets accpected into <b>KBS 2021</b>! <br />
-                </p>
-            </li>
-        </ul>        
+        </ul> 
 
         <h2>Education</h2>
         <ul>
             <li>
-                <p>2021/09-Present: Software Engineer, Tencent <br /></p>
-            </li>
-        </ul>
-
-        <ul>
-            <li>
-                <p>2019/9-2021/7: Master of Science, Technical University of Denmark, GPA 10.98/12 <br /></p>
+                <p>2019/9-2021/7: Master of Science, Autonomous Systems, Technical University of Denmark, GPA 3.55/4.0 <br /></p>
             </li>
         </ul>
 
@@ -167,16 +144,17 @@
 
         <ul>
             <li>
-                <p>2021/08-2021/11: Research Assistant, advised by Prof. Aasa Feragen, Technical University of Denmark
-                <br />
+                <p><b>Whisker sensor for autonomous robot</b> &nbsp;&nbsp;
+                    2020/01-2020/02: Project Owner of MSc. Thesis, advised by Prof. Roberto Galaezzi, Technical University of Denmark
+                    <br />
                 </p>
             </li>
         </ul>
 
         <ul>
             <li>
-                <p>
-                    2017/07-2019/06: Research Assistant, advised by Prof. Jun Wu, Huazhong University of Science and Technology
+                <p><b>Whisker sensor for autonomous robot</b> &nbsp;&nbsp;
+                    2020/01-2020/02: Project Owner of Speical Course, advised by Prof. Jens Christian Andersen, Technical University of Denmark
                     <br />
                 </p>
             </li>
