--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <table class="imgtable">
             <tr>
                 <td>
-                    <a href="https://withtimesgo1115.github.io/"><img src="picture/wximg.jpg" alt="alt text" width="125px" /></a>&nbsp;
+                    <a href="https://withtimesgo1115.github.io/"><img src="picture/WechatIMG35.jpeg" alt="alt text" width="125px" /></a>&nbsp;
                 </td>
                 <td align="left">
                     <ul>
@@ -144,8 +144,8 @@
 
         <ul>
             <li>
-                <p><b>Whisker sensor for autonomous robot</b> &nbsp;&nbsp;
-                    2020/01-2020/02: Project Owner of MSc. Thesis, advised by Prof. Roberto Galaezzi, Technical University of Denmark
+                <p><b>Robust classification of fish species during demersal trawling</b> &nbsp;&nbsp;
+                    2021/02-2021/07: Project Owner of MSc. Thesis, advised by Prof. Roberto Galaezzi, Technical University of Denmark
                     <br />
                 </p>
             </li>
